--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -84,18 +84,18 @@
 		<div class="Column_wrapper">
 			<div class="Three-Column_left">
 				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/IMG_1039_min.JPG">
-				<p class="Catch-copy_min">隠密性と駆動時間の向上</p>
+				<p class="Catch-copy_min">隠密性と駆動時間向上</p>
 				<p class="Base-text">暗視モードで強制点灯していたIR投光器を排除することにより、自己位置の曝露を防止するだけでなく駆動時間の延長に。</p>
 			</div>
 			<div class="Three-Column_center">
-				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0072_min.JPG">
-				<p class="Catch-copy_min">マウント方法の自由化</p>
-				<p class="Base-text">G43系のフリップガンマウントやDOVETAILインターフェースと接眼レンズオプションによるヘルメットマウントなど、柔軟な運用が可能。</p>
+				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0073.jpg">
+				<p class="Catch-copy_min">オプションでの機能強化</p>
+				<p class="Base-text">ポリカーボネート製レンズガードの装着や偏光板での無段階でのモニター輝度調整、バッテリーの外部化など、実用性を向上。</p>
 			</div>
 			<div class="Three-Column_right">
 				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0084_min.JPG">
-				<p class="Catch-copy_min">オプションでの機能強化</p>
-				<p class="Base-text">ポリカーボネート製レンズガードの装着や偏光板での無段階でのモニター輝度調整、バッテリーの外部化など、実用性を向上。</p>
+				<p class="Catch-copy_min">ヘルメットマウント化</p>
+				<p class="Base-text">スマホVR用レンズを流用し、実用的な視認距離で夢ビジョンをハンズフリー運用可能に。</p>
 			</div>
 		</div>
 	</div>
@@ -107,23 +107,20 @@
 			</div>
 			<div class="V-Card_Text">
 				<p class="Content-number">01</p>
-				<h3>手軽なサバゲ向け双眼として</h3>
-				<p class="Base-text">安心して撃たれ、安心して転べる軽量・安価なデジタル双眼NVとして。モジュール構成のため被弾しても破損部位の交換のみで修理が可能。</p>
+				<h3>手軽なサバゲ向けNVとして</h3>
+				<p class="Base-text">安心して撃たれ、安心して転べる安価なデジタルNVとして。モジュール構成のため被弾しても破損部位の交換のみで修理が可能。</p>
 			</div>
 		</div>
 		<div class="V-Card">
 			<div class="V-Card_Text">
 				<p class="Content-number">02</p>
 				<h3>マウント方法の自由化</h3>
-				<p class="Base-text">G43系のフリップガンマウントやDOVETAILインターフェースと接眼レンズオプションによるヘルメットマウントなど、柔軟な運用が可能。</p>
+				<p class="Base-text">2台利用しての双眼運用でも400gを切る最軽量級。ガンマウントオプションでのドットサイトとのタンデム運用も可能。</p>
 			</div>
 			<div class="V-Card_Photo">
-				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0050~2.jpg" >
+				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0072~2.jpg" >
 			</div>
 		</div>
-	</div>
-	<div class="Content-wrapper">
-		
 	</div>
 	
 	<!-- - - - - - - - - - - ここからUpdate周り - - - - - - - - - -->
