--- a/index.html
+++ b/index.html
@@ -90,24 +90,24 @@
 	
 	<div class="Content-wrapper">
 		<h2 class="collection-title">PRODUCTS</h2>
-		<div class="Product-wrapper">
-			<div class="Product dark">
-				<div class="Product-description">
-					<p class="Product-title">YUME</p>
-					<p class="Product-text">中華製の謎の激安第1世代デジタルNV、通称『夢ビジョン』用強化モジュール式外装</p>
-					<a class="btn dark" href="https://qoo622.github.io/Arsenal-Q62/YUME_ARSENAL-Q62.html">VIEW MORE</a>
-				</div>
-				<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0012@2x.png">
+		<a class="Product dark" href="https://qoo622.github.io/Arsenal-Q62/YUME_ARSENAL-Q62.html">
+			<div class="Product-description">
+				<p class="Product-title">YUME</p>
+				<p class="tag">New</p><p class="tag">Yume-vision</p><p class="tag">Equipment</p>
+				<p class="Product-text">中華製の謎の激安第1世代デジタルNV、通称『夢ビジョン』用強化モジュール式外装</p>
 			</div>
-			<div class="Product light">
-				<div class="Product-description">
-					<p class="Product-title">P320 Extra Frame</p>
-					<p class="Product-text">SIG/VFC P320用のオリジナルカービンコンバージョンキット</p>
-					<a class="btn-light" href="https://qoo622.github.io/Arsenal-Q62/P320-EXF_ARSENAL-Q62.html">VIEW MORE</a>
-				</div>
-				<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/IMG_1043.PNG">
+			<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0012@2x.png">
+			<p class="GoToPage">Go to Page<i class="fa-solid fa-circle-chevron-right"></i></p>
+		</a>
+		<a class="Product light" href="https://qoo622.github.io/Arsenal-Q62/P320-EXF_ARSENAL-Q62.html">
+			<div class="Product-description">
+				<p class="Product-title">P320 Extra Frame</p>
+				<p class="tag">P320</p><p class="tag">Custom parts</p>
+				<p class="Product-text">SIG/VFC P320用のオリジナルカービンコンバージョンキット</p>
 			</div>
-		</div>
+			<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/IMG_1043.PNG">
+			<p class="GoToPage">Go to Page<i class="fa-solid fa-circle-chevron-right"></i></p>
+		</a>
 	</div>
 
 	<!-- - - - - - - - - - - ここからDISCLAIMER周り - - - - - - - - - - - -->
