--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -152,16 +152,15 @@
 	<!-- - - - - - - - - - - ここからProduct周り - - - - - - - - - -->
 	<div class="Content-wrapper">
 		<h2 class="collection-title">PRODUCTS</h2>
-		<div class="Product-wrapper">
-			<div class="Product light">
-				<div class="Product-description">
-					<p class="Product-title">P320 Extra Frame</p>
-					<p class="Product-text">SIG/VFC P320用のオリジナルカービンコンバージョンキット</p>
-					<a class="btn-light" href="https://qoo622.github.io/Arsenal-Q62/P320-EXF_ARSENAL-Q62.html">VIEW MORE</a>
-				</div>
-				<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/IMG_1043.PNG">
+		<a class="Product light" href="https://qoo622.github.io/Arsenal-Q62/P320-EXF_ARSENAL-Q62.html">
+			<div class="Product-description">
+				<p class="Product-title">P320 Extra Frame</p>
+				<p class="tag">P320</p><p class="tag">Custom parts</p>
+				<p class="Product-text">SIG/VFC P320用のオリジナルカービンコンバージョンキット</p>
 			</div>
-		</div>
+			<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/IMG_1043.PNG">
+			<p class="GoToPage">Go to Page<i class="fa-solid fa-circle-chevron-right"></i></p>
+		</a>
 	</div>
 	
 	<!-- ここからTwitterシェアボタン -->
