--- a/index.html
+++ b/index.html
@@ -108,6 +108,46 @@
 			<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/IMG_1043.PNG">
 			<p class="GoToPage">Go to Page<i class="fa-solid fa-circle-chevron-right"></i></p>
 		</a>
+		<div class="Column_wrapper">
+			<div class="Column-left">
+				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/M870/M870_M-LOK_Shell-Holder.stl" target="_blank" rel="noopener noreferrer">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20220524_045122485-01.jpeg">
+						<p class="Product-title">M-LOK Shell Holder</p>
+						<p class="tag">M-LOK</p><p class="tag">Custom parts</p>
+						<p class="Product-text">M-LOKスロットに12Gショットシェルを固定可能なホルダー</p>
+						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
+				</a>
+			</div>
+			<div class="Column-right">
+				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/MP7/MP7-Stock-base.stl" target="_blank" rel="noopener noreferrer">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/IMG_20210604_1944569-01.jpeg">
+						<p class="Product-title">MP7 20mm Stock Base</p>
+						<p class="tag">MP7</p><p class="tag">Custom parts</p>
+						<p class="Product-text">マルイ電動MP7用の20mm規格ストックベース</p>
+						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
+					</a>
+			</div>
+		</div>
+		<div class="Column_wrapper">
+			<div class="Column-left">
+				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/G19_slide-cover-plate_charging-ring.stl" target="_blank" rel="noopener noreferrer">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/IMG_20210125_2348102.jpg">
+						<p class="Product-title">Glock Charging Ring</p>
+						<p class="tag">Glock</p><p class="tag">Custom parts</p>
+						<p class="Product-text">マルイ GBB Gen.3 Glockのリアプレート用チャージングリング</p>
+						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
+				</a>
+			</div>
+			<div class="Column-right">
+				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/TM-CCG_Holster-Base.stl" target="_blank" rel="noopener noreferrer">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20220511_025748748-01.jpeg">
+						<p class="Product-title">Compact Carry QLS</p>
+						<p class="tag">Holster</p><p class="tag">Equipment</p>
+						<p class="Product-text">マルイコンパクトキャリー用ホルスターのQLSアダプター</p>
+						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
+					</a>
+			</div>
+		</div>
 	</div>
 
 	<!-- - - - - - - - - - - ここからDISCLAIMER周り - - - - - - - - - - - -->
