--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -161,6 +161,26 @@
 			<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/IMG_1043.PNG">
 			<p class="GoToPage">Go to Page<i class="fa-solid fa-circle-chevron-right"></i></p>
 		</a>
+		<div class="Column_wrapper">
+			<div class="Column-left">
+				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/M870/M870_M-LOK_Shell-Holder.stl" target="_blank" rel="noopener noreferrer">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20220524_045122485-01.jpeg">
+						<p class="Product-title">M-LOK Shell Holder</p>
+						<p class="tag">M-LOK</p><p class="tag">Custom parts</p>
+						<p class="Product-text">M-LOKスロットに12Gショットシェルを固定可能なホルダー</p>
+						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
+				</a>
+			</div>
+			<div class="Column-right">
+				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/TM-CCG_Holster-Base.stl" target="_blank" rel="noopener noreferrer">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20220511_025748748-01.jpeg">
+						<p class="Product-title">Compact Carry QLS</p>
+						<p class="tag">Holster</p><p class="tag">Custom parts</p>
+						<p class="Product-text">マルイコンパクトキャリー用ホルスターのQLSアダプター</p>
+						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
+				</a>
+			</div>
+		</div>
 	</div>
 	
 	<!-- ここからTwitterシェアボタン -->
