--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 
 	<head>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-VT50B10H4F"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		
+		  gtag('config', 'G-VT50B10H4F');
+		</script>
 		<meta charset="utf-8">
 		<title>ARSENAL Q62</title>
 		<link rel="icon" href="https://qoo622.github.io/Arsenal-Q62/img/logo/Arsenal-Q62_favicon.svg" type="image/svg+xml">
