--- a/P320-EXF_ARSENAL-Q62.html
+++ b/P320-EXF_ARSENAL-Q62.html
@@ -1,6 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-K3PNJDW8');</script>
+		<!-- End Google Tag Manager -->
 		<meta charset="utf-8">
 		<title>P320 EXF | ARSENAL-Q62</title>
 		<link rel="icon" href="https://qoo622.github.io/Arsenal-Q62/img/logo/Arsenal-Q62_favicon.svg" type="image/svg+xml">
@@ -38,6 +45,10 @@
 	</head>
 	
 	<body style="background-color: rgba(192,192,192,1); color: #000000;">
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K3PNJDW8"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
 		<div class="bg">
 			<img class="bg-logo" src="https://qoo622.github.io/Arsenal-Q62/img/logo/Arsenal-Q62_logo_bg.svg">
 		</div>
