--- a/P320-EXF_ARSENAL-Q62.html
+++ b/P320-EXF_ARSENAL-Q62.html
@@ -8,6 +8,15 @@
 		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 		})(window,document,'script','dataLayer','GTM-K3PNJDW8');</script>
 		<!-- End Google Tag Manager -->
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-VT50B10H4F"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		
+		  gtag('config', 'G-VT50B10H4F');
+		</script>
 		<meta charset="utf-8">
 		<title>P320 EXF | ARSENAL-Q62</title>
 		<link rel="icon" href="https://qoo622.github.io/Arsenal-Q62/img/logo/Arsenal-Q62_favicon.svg" type="image/svg+xml">
