--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 				<h3>データの活用について</h3>
 				<p class="Base-text">プロダクトに関しては皆様のDIYを応援する意図で、基本的にすべてGithub上で無料で公開しています。公開しているデータは個人の範囲で自由にご利用いただけます。ご家庭の3Dプリンターや業者委託での出力などで活用ください。</p>
 				<p class="Base-text">改変・改善を伴わない再配布や出力品の販売は禁止しています。基本的に「ご自身が楽しむため」に活用してください。</p>
+				<p class="Base-text">依頼ベースでの個人間の代理出力などについては問題ありません。本ページ下部のFAQも参照ください。</p>
 			</div>
 		</div>
 	</div>
@@ -199,6 +200,10 @@
 			<div class="FAQ-Content">
 				<h4>Q. 完成品の有料販売はありますか？</h4>
 				<p class="Base-text">諸々のトラブルを避けるため現在のところ予定しておりません。お手元で再現するのに必要なデータはすべて公開しています。DIYをぜひ楽しんでください。</p>
+			</div>
+			<div class="FAQ-Content">
+				<h4>Q. 個人等に代理出力をお願いしても構いませんか？/代理出力を受け付けても構いませんか？</h4>
+				<p class="Base-text">依頼ベースで代理出力いただくのは問題ありません。材料費等だけでなく手間賃なども当事者間で設定くださって結構です。ただし、出力品の不具合や破損、納品や入金等に伴うトラブルについては当事者間で解決してください。</p>
 			</div>
 			<div class="FAQ-Content">
 				<h4>Q. 公開データを元にオリジナルプロダクトを作ってもいいですか？</h4>
