--- a/P320-EXF_ARSENAL-Q62.html
+++ b/P320-EXF_ARSENAL-Q62.html
@@ -120,7 +120,7 @@
 	</div>
 	<div class="Content-wrapper">
 		<div class="single-column_center">
-			<iframe src="https://collaborate.shapr3d.com/v/HYux0Eo1nlbIqIXJJUmg2" title="Shapr3D Webviewer" width="640" height="640" frameborder="0" allow="web-share; xr-spatial-tracking" loading="lazy" scrolling="no" referrerpolicy="origin-when-cross-origin" allowfullscreen></iframe>
+			<iframe src="https://collaborate.shapr3d.com/v/HYux0Eo1nlbIqIXJJUmg2" title="Shapr3D Webviewer" frameborder="0" allow="web-share; xr-spatial-tracking" loading="lazy" scrolling="no" referrerpolicy="origin-when-cross-origin" allowfullscreen></iframe>
 		</div>
 	</div>
 	<div class="Content-wrapper">
