--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
 	<!-- - - - - - - - - - - ここからUPDATE周り - - - - - - - - - - - -->
 		<div class="Content-wrapper">
 			<h2 class="collection-title">UPDATE</h2>
+			<a class="Update-content" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/FNVGS">
+				<div class="Date">2024.03.26.</div>
+				<div class="Base-text">折りたたみ暗視デバイススタンド “FNVGS” を公開しました。</div>
+			</a>
 			<div class="Update-content_no-link">
 				<div class="Date">2024.03.09.</div>
 				<div class="Base-text">ARSENAL Q62としての活動ページを公開しました。</div>
