--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -154,6 +154,7 @@
 		<div class="Update-content_no-link">
 			<div class="Date">2024.04.04.</div>
 			<div class="Base-text">外部電源化用の蓋「YUME_v1.1_Connector-cover_ext」と20mmレールダイレクトマウント用オプション「YUME_v1.1_Upper_20mm / YUME_V1.1_20mm-adapter」を公開しました。</div>
+		</div>
 		<div class="Update-content_no-link">
 			<div class="Date">2024.01.28.</div>
 			<div class="Base-text">ヘルメットマウント用レンズを改良したRearパーツをv1.2に更新しました。</div>
