--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -152,6 +152,10 @@
 	<div class="Content-wrapper">
 		<h2 class="collection-title">UPDATE</h2>
 		<div class="Update-content_no-link">
+			<div class="Date">2024.04.08.</div>
+			<div class="Base-text">Frontの印刷効率を高めたv1.2と組み込み補助用のスペーサーを公開しました。</div>
+		</div>
+		<div class="Update-content_no-link">
 			<div class="Date">2024.04.04.</div>
 			<div class="Base-text">外部電源化用の蓋「YUME_v1.1_Connector-cover_ext」と20mmレールダイレクトマウント用オプション「YUME_v1.1_Upper_20mm / YUME_V1.1_20mm-adapter」を公開しました。</div>
 		</div>
