--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
 	<!-- - - - - - - - - - - ここからUPDATE周り - - - - - - - - - - - -->
 		<div class="Content-wrapper">
 			<h2 class="collection-title">UPDATE</h2>
+			<a class="Update-content" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/YUME_v1/DayDream" target="_blank" rel="noopener noreferrer">
+				<div class="Date">2024.05.07.</div>
+				<div class="Base-text">サーマルフュージョンオプション『DayDream』を公開しました。</div>
+			</a>
 			<a class="Update-content" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/FNVGS" target="_blank" rel="noopener noreferrer">
 				<div class="Date">2024.03.26.</div>
 				<div class="Base-text">折りたたみ暗視デバイススタンド “FNVGS” を公開しました。</div>
