--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<h2 class="collection-title">UPDATE</h2>
 			<a class="Update-content" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/YUME_v1/DayDream" target="_blank" rel="noopener noreferrer">
 				<div class="Date">2024.05.07.</div>
-				<div class="Base-text">サーマルフュージョンオプション『DayDream』を公開しました。</div>
+				<div class="Base-text">夢ビジョン強化外装『YUME』のサーマルフュージョンオプション『DayDream』を公開しました。</div>
 			</a>
 			<a class="Update-content" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/FNVGS" target="_blank" rel="noopener noreferrer">
 				<div class="Date">2024.03.26.</div>
