--- a/index.html
+++ b/index.html
@@ -188,7 +188,13 @@
 				</a>
 			</div>
 			<div class="Column-right">
-				
+				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/NGRS_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/GY2-lglasAAdFbg.jpeg">
+						<p class="Product-title">"Mag" Plate</p>
+						<p class="tag">Magazine</p><p class="tag">Firsgun</p>
+						<p class="Product-text">次世代M4用P-Magに磁石を仕込めるようになるボトムプレート</p>
+						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
+				</a>
 			</div>
 		</div>
 	</div>
