--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
 	<!-- - - - - - - - - - - ここからUPDATE周り - - - - - - - - - - - -->
 		<div class="Content-wrapper">
 			<h2 class="collection-title">UPDATE</h2>
+			<a class="Update-content" href="Magplate">
+				<div class="Date">2024.10.07.</div>
+				<div class="Base-text">次世代用P-Mag向けの磁石入りボトムプレート『"Mag" Plate』を公開しました。</div>
+			</a>
 			<a class="Update-content" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/YUME_v1/DayDream" target="_blank" rel="noopener noreferrer">
 				<div class="Date">2024.05.07.</div>
 				<div class="Base-text">夢ビジョン強化外装『YUME』のサーマルフュージョンオプション『DayDream』を公開しました。</div>
@@ -187,7 +191,7 @@
 						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
 				</a>
 			</div>
-			<div class="Column-right">
+			<div class="Column-right" id="Magplate">
 				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/NGRS_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/GY2-lglasAAdFbg.jpeg">
 						<p class="Product-title">"Mag" Plate</p>
