--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	<!-- - - - - - - - - - - ここからUPDATE周り - - - - - - - - - - - -->
 		<div class="Content-wrapper">
 			<h2 class="collection-title">UPDATE</h2>
-			<a class="Update-content" name="Magplate">
+			<a class="Update-content" href="https://qoo622.github.io/Arsenal-Q62/index.html#Magplate">
 				<div class="Date">2024.10.07.</div>
 				<div class="Base-text">次世代用P-Mag向けの磁石入りボトムプレート『"Mag" Plate』を公開しました。</div>
 			</a>
@@ -121,7 +121,7 @@
 	
 	<!-- - - - - - - - - - - ここからPRODUCT周り - - - - - - - - - - - -->	
 	
-	<div class="Content-wrapper" name="Product">
+	<div class="Content-wrapper" id="Product">
 		<h2 class="collection-title">PRODUCTS</h2>
 		<a class="Product dark" href="https://qoo622.github.io/Arsenal-Q62/YUME_ARSENAL-Q62.html">
 			<div class="Product-description">
@@ -191,7 +191,7 @@
 						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
 				</a>
 			</div>
-			<div class="Column-right" name="Magplate">
+			<div class="Column-right" id="Magplate">
 				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/NGRS_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/GY2-lglasAAdFbg.jpeg">
 						<p class="Product-title">"Mag" Plate</p>
