--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	<!-- - - - - - - - - - - ここからUPDATE周り - - - - - - - - - - - -->
 		<div class="Content-wrapper">
 			<h2 class="collection-title">UPDATE</h2>
-			<a class="Update-content" href="https://qoo622.github.io/Arsenal-Q62/index.html#Magplate">
+			<a class="Update-content" href="#Magplate">
 				<div class="Date">2024.10.07.</div>
 				<div class="Base-text">次世代用P-Mag向けの磁石入りボトムプレート『"Mag" Plate』を公開しました。</div>
 			</a>
