--- a/index.html
+++ b/index.html
@@ -181,6 +181,26 @@
 					</a>
 			</div>
 		</div>
+		<div class="Column_wrapper" id="Magplate-AKM">
+			<div class="Column-left">
+				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/AKM-GBB_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20241014_040609758.MP.jpg">
+						<p class="Product-title">"Mag" Plate for AKM</p>
+						<p class="tag">Magazine</p><p class="tag">Firsgun</p>
+						<p class="Product-text">東京マルイ製GBB AKMマガジンに磁石を仕込めるようになるボトムプレート</p>
+						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
+				</a>
+			</div>
+			<div class="Column-right" id="Magplate">
+				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/NGRS_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/GY2-lglasAAdFbg.jpeg">
+						<p class="Product-title">"Mag" Plate for P-Mag</p>
+						<p class="tag">Magazine</p><p class="tag">Firsgun</p>
+						<p class="Product-text">次世代M4用P-Magに磁石を仕込めるようになるボトムプレート</p>
+						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
+				</a>
+			</div>
+		</div>
 		<div class="Column_wrapper">
 			<div class="Column-left">
 				<a class="Product-min" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/FNVGS" target="_blank" rel="noopener noreferrer">
@@ -191,15 +211,7 @@
 						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
 				</a>
 			</div>
-			<div class="Column-right" id="Magplate">
-				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/NGRS_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
-					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/GY2-lglasAAdFbg.jpeg">
-						<p class="Product-title">"Mag" Plate</p>
-						<p class="tag">Magazine</p><p class="tag">Firsgun</p>
-						<p class="Product-text">次世代M4用P-Magに磁石を仕込めるようになるボトムプレート</p>
-						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
-				</a>
-			</div>
+			
 		</div>
 	</div>
 
