--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 		<div class="Column_wrapper" id="Magplate-AKM">
 			<div class="Column-left">
 				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/AKM-GBB_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
-					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20241014_040609758.MP.jpg">
+					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20241014_040609758_min.jpg">
 						<p class="Product-title">"Mag" Plate for AKM</p>
 						<p class="tag">Magazine</p><p class="tag">Firsgun</p>
 						<p class="Product-text">東京マルイ製GBB AKMマガジンに磁石を仕込めるようになるボトムプレート</p>
