--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20241014_040609758_min.jpg">
 						<p class="Product-title">"Mag" Plate for AKM</p>
 						<p class="tag">Magazine</p><p class="tag">Firsgun</p>
-						<p class="Product-text">東京マルイ製GBB AKMマガジンに磁石を仕込めるようになるボトムプレート</p>
+						<p class="Product-text">TM製AKMマガジンに磁石を仕込めるようになるボトムプレート</p>
 						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
 				</a>
 			</div>
