--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
 						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
 				</a>
 			</div>
-			
+			<div class="Column-right">
+			</div>
 		</div>
 	</div>
 
