--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 		<script src="https://kit.fontawesome.com/32bd0e5d50.js" crossorigin="anonymous"></script>
 		<!-- jsの読み込み -->
 		<script src="ARSENAL-Q62.js"></script>
+		<!-- jQueryの読み込み -->
+		<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 		<!-- ogp -->
 		<head prefix=”og: http://ogp.me/ns#”>
 			<meta property="og:url" content="https://qoo622.github.io/Arsenal-Q62/index.html" />
@@ -123,11 +125,11 @@
 	
 	<div class="Content-wrapper" id="Product">
 		<h2 class="collection-title">PRODUCTS</h2>
-		<a class="Product dark" href="https://qoo622.github.io/Arsenal-Q62/YUME_ARSENAL-Q62.html">
+		<a class="Product dark fadeUpTrigger" href="https://qoo622.github.io/Arsenal-Q62/YUME_ARSENAL-Q62.html">
 			<div class="Product-description">
 				<p class="Product-title">YUME</p>
 				<p class="tag">New</p><p class="tag">Yume-vision</p><p class="tag">Equipment</p>
-				<p class="Product-text">中華製の謎の激安第1世代デジタルNV、通称『夢ビジョン』用強化モジュール式外装</p>
+				<p class="Product-text">中華製の謎の激安デジタルNV、通称『夢ビジョン』用強化モジュール式外装</p>
 			</div>
 			<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0012@2x.png">
 			<p class="GoToPage">Go to Page<i class="fa-solid fa-circle-chevron-right"></i></p>
