--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0012@2x.png">
 			<p class="GoToPage">Go to Page<i class="fa-solid fa-circle-chevron-right"></i></p>
 		</a>
-		<a class="Product light" href="https://qoo622.github.io/Arsenal-Q62/P320-EXF_ARSENAL-Q62.html">
+		<a class="Product light fadeUpTrigger" href="https://qoo622.github.io/Arsenal-Q62/P320-EXF_ARSENAL-Q62.html">
 			<div class="Product-description">
 				<p class="Product-title">P320 Extra Frame</p>
 				<p class="tag">P320</p><p class="tag">Custom parts</p>
@@ -145,7 +145,7 @@
 		</a>
 		<div class="Column_wrapper">
 			<div class="Column-left">
-				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/M870/M870_M-LOK_Shell-Holder.stl" target="_blank" rel="noopener noreferrer">
+				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/M870/M870_M-LOK_Shell-Holder.stl" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20220524_045122485-01.jpeg">
 						<p class="Product-title">M-LOK Shell Holder</p>
 						<p class="tag">M-LOK</p><p class="tag">Custom parts</p>
@@ -154,7 +154,7 @@
 				</a>
 			</div>
 			<div class="Column-right">
-				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/MP7/MP7-Stock-base.stl" target="_blank" rel="noopener noreferrer">
+				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/MP7/MP7-Stock-base.stl" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/IMG_20210604_1944569-01.jpeg">
 						<p class="Product-title">MP7 20mm Stock Base</p>
 						<p class="tag">MP7</p><p class="tag">Custom parts</p>
@@ -165,7 +165,7 @@
 		</div>
 		<div class="Column_wrapper">
 			<div class="Column-left">
-				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/G19_slide-cover-plate_charging-ring.stl" target="_blank" rel="noopener noreferrer">
+				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/etc/G19_slide-cover-plate_charging-ring.stl" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/IMG_20210125_2348102.jpg">
 						<p class="Product-title">Glock Charging Ring</p>
 						<p class="tag">Glock</p><p class="tag">Custom parts</p>
@@ -174,7 +174,7 @@
 				</a>
 			</div>
 			<div class="Column-right">
-				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/TM-CCG_Holster-Base.stl" target="_blank" rel="noopener noreferrer">
+				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/etc/TM-CCG_Holster-Base.stl" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20220511_025748748-01.jpeg">
 						<p class="Product-title">Compact Carry QLS</p>
 						<p class="tag">Holster</p><p class="tag">Equipment</p>
@@ -185,7 +185,7 @@
 		</div>
 		<div class="Column_wrapper" id="Magplate-AKM">
 			<div class="Column-left">
-				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/AKM-GBB_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
+				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/etc/AKM-GBB_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20241014_040609758_min.jpg">
 						<p class="Product-title">"Mag" Plate for AKM</p>
 						<p class="tag">Magazine</p><p class="tag">Firsgun</p>
@@ -194,7 +194,7 @@
 				</a>
 			</div>
 			<div class="Column-right" id="Magplate">
-				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/NGRS_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
+				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/etc/NGRS_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/GY2-lglasAAdFbg.jpeg">
 						<p class="Product-title">"Mag" Plate for P-Mag</p>
 						<p class="tag">Magazine</p><p class="tag">Firsgun</p>
@@ -205,7 +205,7 @@
 		</div>
 		<div class="Column_wrapper">
 			<div class="Column-left">
-				<a class="Product-min" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/FNVGS" target="_blank" rel="noopener noreferrer">
+				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/FNVGS" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/FNVGS_cover_Square.png">
 						<p class="Product-title">FNVGS</p>
 						<p class="tag">NVG</p><p class="tag">Display</p>
