--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 			</div>
 		</div>
 		<div class="Column_wrapper">
-			<div class="Column-left">
-				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/etc/G19_slide-cover-plate_charging-ring.stl" target="_blank" rel="noopener noreferrer">
+			<div class="Column-left fadeUpTrigger">
+				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/G19_slide-cover-plate_charging-ring.stl" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/IMG_20210125_2348102.jpg">
 						<p class="Product-title">Glock Charging Ring</p>
 						<p class="tag">Glock</p><p class="tag">Custom parts</p>
@@ -173,8 +173,8 @@
 						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
 				</a>
 			</div>
-			<div class="Column-right">
-				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/etc/TM-CCG_Holster-Base.stl" target="_blank" rel="noopener noreferrer">
+			<div class="Column-right fadeUpTrigger">
+				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/TM-CCG_Holster-Base.stl" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20220511_025748748-01.jpeg">
 						<p class="Product-title">Compact Carry QLS</p>
 						<p class="tag">Holster</p><p class="tag">Equipment</p>
@@ -183,9 +183,9 @@
 					</a>
 			</div>
 		</div>
-		<div class="Column_wrapper" id="Magplate-AKM">
-			<div class="Column-left">
-				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/etc/AKM-GBB_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
+		<div class="Column_wrapper">
+			<div class="Column-left fadeUpTrigger" id="Magplate-AKM">
+				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/AKM-GBB_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/PXL_20241014_040609758_min.jpg">
 						<p class="Product-title">"Mag" Plate for AKM</p>
 						<p class="tag">Magazine</p><p class="tag">Firsgun</p>
@@ -193,8 +193,8 @@
 						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
 				</a>
 			</div>
-			<div class="Column-right" id="Magplate">
-				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/etc/NGRS_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
+			<div class="Column-right fadeUpTrigger" id="Magplate">
+				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/NGRS_Mag-Plate_v1.0.stl" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/GY2-lglasAAdFbg.jpeg">
 						<p class="Product-title">"Mag" Plate for P-Mag</p>
 						<p class="tag">Magazine</p><p class="tag">Firsgun</p>
@@ -204,8 +204,8 @@
 			</div>
 		</div>
 		<div class="Column_wrapper">
-			<div class="Column-left">
-				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/FNVGS" target="_blank" rel="noopener noreferrer">
+			<div class="Column-left fadeUpTrigger">
+				<a class="Product-min" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/FNVGS" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/FNVGS_cover_Square.png">
 						<p class="Product-title">FNVGS</p>
 						<p class="tag">NVG</p><p class="tag">Display</p>
@@ -213,7 +213,7 @@
 						<p class="GoToGithub">Go to Github<i class="fa-solid fa-up-right-from-square"></i></p>
 				</a>
 			</div>
-			<div class="Column-right">
+			<div class="Column-right fadeUpTrigger">
 			</div>
 		</div>
 	</div>
