--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 	<div class="Content-wrapper">
 		<h2 class="collection-title">DISCLAIMER</h2>
 		<div class="Column_wrapper">
-			<div class="Column-left">
+			<div class="Column-left fadeUpTrigger">
 				<h3>免責事項</h3>
 				<p class="Base-text">公開しているプロダクトの作成・利用はすべて自己責任となります。上記に伴ういかなる損害・トラブルに関しても当方では責任を負えません。別途定めるオリジナルプロダクトへの展開についても、ご自身での対応をよろしくお願いします。</p>
 				<p class="Base-text">また、個別の改変・カスタム依頼も受け付けておりませんのでご了承ください。</p>	
@@ -230,19 +230,19 @@
 		
 			<div class="Column-right">
 			<h3>よくあるご質問</h3>
-			<div class="FAQ-Content">
+			<div class="FAQ-Content fadeUpTrigger">
 				<h4>Q. 完成品の有料販売はありますか？</h4>
 				<p class="Base-text">諸々のトラブルを避けるため現在のところ予定しておりません。お手元で再現するのに必要なデータはすべて公開しています。DIYをぜひ楽しんでください。</p>
 			</div>
-			<div class="FAQ-Content">
+			<div class="FAQ-Content fadeUpTrigger">
 				<h4>Q. 個人等に代理出力をお願いしても構いませんか？/代理出力を受け付けても構いませんか？</h4>
 				<p class="Base-text">依頼ベースで代理出力いただくのは問題ありません。材料費等だけでなく手間賃なども当事者間で設定くださって結構です。ただし、出力品の不具合や破損、納品や入金等に伴うトラブルについては当事者間で解決してください。</p>
 			</div>
-			<div class="FAQ-Content">
+			<div class="FAQ-Content fadeUpTrigger">
 				<h4>Q. 公開データを元にオリジナルプロダクトを作ってもいいですか？</h4>
 				<p class="Base-text">大歓迎です。お手元で改善や追加を行っていただいたものでしたら、ご自身の責任範囲にて自由に扱っていただいて構いません。上記の条件の下であれば二次配布や販売もOKです。クレジット等はしていただければ大変ありがたいですが、必須ではありません。利益の按分等も請求しません。ただし、展開品や後発品の販売を理由とした公開差し止め請求については法的・著作権的に問題がある場合を除き応じることはできません。</p>
 			</div>
-			<div class="FAQ-Content">
+			<div class="FAQ-Content fadeUpTrigger">
 				<h4>Q. どこからが二次配布・販売可能な「改善」にあたりますか？</h4>
 				<p class="Base-text">創作をする皆様の良心にお任せしております。基本的に「ご自身で責任を取れる範囲」とお考えください。</p>
 			</div>
