--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
 	<div class="Content-wrapper">
 		<h2 class="collection-title">ABOUT</h2>
 		<div class="Column_wrapper">
-			<div class="Column-left">
+			<div class="Column-left fadeUpTrigger">
 				<h3>「非破壊非加工」で「新しい遊び方」を</h3>
 				<p class="Base-text">ARSENAL Q62 は デザイナーのQoo622が個人の趣味で主にエアソフトやサバイバルゲーム向けプロダクトを作る活動です。元ネタを極力破壊せず、新しい使い方や楽しみ方ができることを目指しています。それらしく活動しているものの、あくまで個人の趣味の範囲です。細かい粗はご容赦ください。</p>
 				<p class="Base-text">こちらのページでは制作物の紹介や更新情報を提供しています。</p>
 			</div>
-			<div class="Column-right">
+			<div class="Column-right fadeUpTrigger">
 				<h3>データの活用について</h3>
 				<p class="Base-text">プロダクトに関しては皆様のDIYを応援する意図で、基本的にすべてGithub上で無料で公開しています。公開しているデータは個人の範囲で自由にご利用いただけます。ご家庭の3Dプリンターや業者委託での出力などで活用ください。</p>
 				<p class="Base-text">改変・改善を伴わない再配布や出力品の販売は禁止しています。基本的に「ご自身が楽しむため」に活用してください。</p>
