--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		
 	<!-- - - - - - - - - - - ここからUPDATE周り - - - - - - - - - - - -->
 		<div class="Content-wrapper">
-			<h2 class="collection-title">UPDATE</h2>
+			<h2 class="collection-title randomTextTrigger" data-text="UPDATE">UPDATE</h2>
 			<a class="Update-content" href="#Magplate">
 				<div class="Date">2024.10.07.</div>
 				<div class="Base-text">次世代用P-Mag向けの磁石入りボトムプレート『"Mag" Plate』を公開しました。</div>
@@ -105,7 +105,7 @@
 		</div>
 	<!-- - - - - - - - - - - ここからABOUT周り - - - - - - - - - - - -->
 	<div class="Content-wrapper">
-		<h2 class="collection-title">ABOUT</h2>
+		<h2 class="collection-title randomTextTrigger" data-text="ABOUT">ABOUT</h2>
 		<div class="Column_wrapper">
 			<div class="Column-left fadeUpTrigger">
 				<h3>「非破壊非加工」で「新しい遊び方」を</h3>
@@ -124,7 +124,7 @@
 	<!-- - - - - - - - - - - ここからPRODUCT周り - - - - - - - - - - - -->	
 	
 	<div class="Content-wrapper" id="Product">
-		<h2 class="collection-title">PRODUCTS</h2>
+		<h2 class="collection-title randomTextTrigger" data-text="PRODUCTS">PRODUCTS</h2>
 		<a class="Product dark fadeUpTrigger" href="https://qoo622.github.io/Arsenal-Q62/YUME_ARSENAL-Q62.html">
 			<div class="Product-description">
 				<p class="Product-title">YUME</p>
@@ -220,7 +220,7 @@
 
 	<!-- - - - - - - - - - - ここからDISCLAIMER周り - - - - - - - - - - - -->
 	<div class="Content-wrapper">
-		<h2 class="collection-title">DISCLAIMER</h2>
+		<h2 class="collection-title randomTextTrigger" data-text="DISCLAIMER">DISCLAIMER</h2>
 		<div class="Column_wrapper">
 			<div class="Column-left fadeUpTrigger">
 				<h3>免責事項</h3>
