--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 		<!-- fontawesomeアイコンの読み込み -->
 		<script src="https://kit.fontawesome.com/32bd0e5d50.js" crossorigin="anonymous"></script>
 		<!-- jsの読み込み -->
-		<script src="ARSENAL-Q62.js"></script>
+		<!-- <script src="ARSENAL-Q62.js"></script> -->
 		<!-- jQueryの読み込み -->
-		<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-		<script>
+		<!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> -->
+		<!-- <script> -->
 		  $(document).ready(function() {
 		    // スクロールイベント
 		    $(window).on('scroll', function() {
@@ -123,7 +123,7 @@
 		</div>
 	<!-- - - - - - - - - - - ここからABOUT周り - - - - - - - - - - - -->
 	<div class="Content-wrapper">
-		<h2 class="collection-title randomTextTrigger" data-text="ABOUT">ABOUT</h2>
+		<h2 class="collection-title js_typing">ABOUT</h2>
 		<div class="Column_wrapper">
 			<div class="Column-left fadeUpTrigger">
 				<h3>「非破壊非加工」で「新しい遊び方」を</h3>
@@ -282,6 +282,11 @@
 		<p class="footer-text">© 2024. Qoo622</p>
 	</div>
 
+	<!-- jsの読み込み -->
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/shuffle-text@0.3.0/build/shuffle-text.min.js"></script>
+		<script src="ARSENAL-Q62.js"></script>
 	</body>
 
 </html>
