--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		
 	<!-- - - - - - - - - - - ここからUPDATE周り - - - - - - - - - - - -->
 		<div class="Content-wrapper">
-			<h2 class="collection-title randomTextTrigger" data-text="UPDATE">UPDATE</h2>
+			<h2 class="collection-title js_typing">UPDATE</h2>
 			<a class="Update-content" href="#Magplate">
 				<div class="Date">2024.10.07.</div>
 				<div class="Base-text">次世代用P-Mag向けの磁石入りボトムプレート『"Mag" Plate』を公開しました。</div>
@@ -126,7 +126,7 @@
 	<!-- - - - - - - - - - - ここからPRODUCT周り - - - - - - - - - - - -->	
 	
 	<div class="Content-wrapper" id="Product">
-		<h2 class="collection-title randomTextTrigger" data-text="PRODUCTS">PRODUCTS</h2>
+		<h2 class="collection-title js_typing">PRODUCTS</h2>
 		<a class="Product dark fadeUpTrigger" href="https://qoo622.github.io/Arsenal-Q62/YUME_ARSENAL-Q62.html">
 			<div class="Product-description">
 				<p class="Product-title">YUME</p>
@@ -222,7 +222,7 @@
 
 	<!-- - - - - - - - - - - ここからDISCLAIMER周り - - - - - - - - - - - -->
 	<div class="Content-wrapper">
-		<h2 class="collection-title randomTextTrigger" data-text="DISCLAIMER">DISCLAIMER</h2>
+		<h2 class="collection-title js_typing">DISCLAIMER</h2>
 		<div class="Column_wrapper">
 			<div class="Column-left fadeUpTrigger">
 				<h3>免責事項</h3>
