--- a/P320-EXF_ARSENAL-Q62.html
+++ b/P320-EXF_ARSENAL-Q62.html
@@ -37,7 +37,10 @@
 		<script src="https://kit.fontawesome.com/32bd0e5d50.js" crossorigin="anonymous"></script>
 		<!-- JSの読み込み -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-		<script src="https://qoo622.github.io/Arsenal-Q62/ARSENAL-Q62.js"></script>
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+			integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/shuffle-text@0.3.0/build/shuffle-text.min.js"></script>
+		<script src="ARSENAL-Q62.js"></script>
 		<!-- Twitterのスクリプト -->
 		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		<!-- ogp -->
@@ -99,19 +102,19 @@
 	</div>
 	<!-- - - - - - - - - - - ここからFeature周り - - - - - - - - - -->
 	<div class="Content-wrapper">
-		<h2 class="collection-title">FEATURE</h2>
+		<h2 class="collection-title js_typing">FEATURE</h2>
 		<div class="Column_wrapper">
-			<div class="Three-Column_left">
+			<div class="Three-Column_left fadeUpTrigger">
 				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/2E20AC2C-D549-45CB-9654-0B809CAF7E69.jpeg">
 				<p class="Catch-copy_min">拡張性と汎用性</p>
 				<p class="Base-text">フロントの左右に3スロット、下面に6スロットの20mmレールを用意。ライトやフォアグリップなどカービンキットに求められる拡張性を確保。</p>
 			</div>
-			<div class="Three-Column_center">
+			<div class="Three-Column_center fadeUpTrigger">
 				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/DSC_0087.jpg">
 				<p class="Catch-copy_min">照準具の選択肢</p>
 				<p class="Base-text">上面には最大12スロットの20mmレールを採用。LAMとRDSのタンデムだけでなく、軽量スコープなど従来のカービンキットでは難しい構成も。</p>
 			</div>
-			<div class="Three-Column_right">
+			<div class="Three-Column_right fadeUpTrigger">
 				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/DSC_0088.jpg">
 				<p class="Catch-copy_min">自由なストック</p>
 				<p class="Base-text">20mmレール基部によりSIG系折りたたみストックやM4系など、好みや装備に合わせたストックを選択可能。基部には簡易的なスリングホールも。</p>
@@ -123,8 +126,8 @@
 			<iframe src="https://collaborate.shapr3d.com/v/HYux0Eo1nlbIqIXJJUmg2" title="Shapr3D Webviewer"  frameborder="0" allow="web-share; xr-spatial-tracking" loading="lazy" scrolling="no" referrerpolicy="origin-when-cross-origin" allowfullscreen></iframe>		</div>
 	</div>
 	<div class="Content-wrapper">
-		<h2 class="collection-title">OPERATION</h2>
-		<div class="V-Card">
+		<h2 class="collection-title js_typing">OPERATION</h2>
+		<div class="V-Card fadeUpTrigger">
 			<div class="V-Card_Photo">
 				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/DSC_0262-1-scaled~2.jpg" >
 			</div>
@@ -134,7 +137,7 @@
 				<p class="Base-text">各種オプションを盛ることでCQBエリア等でのメインとして運用可能。私服オフィサー系装備だけでなく、電車やバイク等での小荷物サバゲにも。</p>
 			</div>
 		</div>
-		<div class="V-Card">
+		<div class="V-Card fadeUpTrigger">
 			<div class="V-Card_Text">
 				<p class="Content-number">02</p>
 				<h3>HGからの換装は30秒</h3>
@@ -148,7 +151,7 @@
 	</div>
 	<!-- - - - - - - - - - - ここからUpdate周り - - - - - - - - - -->
 	<div class="Content-wrapper">
-		<h2 class="collection-title">UPDATE</h2>
+		<h2 class="collection-title js_typing">UPDATE</h2>
 		<div class="Update-content_no-link">
 			<div class="Date">2023.02.19.</div>
 			<div class="Base-text">ミドルサイズトップレール、本体およびサイドレールの更新版v1.1を公開しました。</div>
@@ -163,7 +166,7 @@
 		</div>
 	</div>
 	<!-- - - - - - - - - - - ここからConversion周り - - - - - - - - - -->
-	<div class="Content-wrapper">
+	<div class="Content-wrapper fadeUpTrigger">
 		<a class="Conversion" href="https://github.com/Qoo622/3D-print/tree/master/P320/Carbine-Kit" target="_blank" rel="noopener noreferrer">
 			<div class="Text">
 				<p class="Catch-copy_min"><i class="fa-solid fa-cloud-arrow-down"></i>How to Download</p>
@@ -174,8 +177,8 @@
 	</div>
 	<!-- - - - - - - - - - - ここからProduct周り - - - - - - - - - -->
 	<div class="Content-wrapper">
-		<h2 class="collection-title">PRODUCTS</h2>
-		<a class="Product dark" href="https://qoo622.github.io/Arsenal-Q62/YUME_ARSENAL-Q62.html">
+		<h2 class="collection-title js_typing">PRODUCTS</h2>
+		<a class="Product dark fadeUpTrigger" href="https://qoo622.github.io/Arsenal-Q62/YUME_ARSENAL-Q62.html">
 			<div class="Product-description">
 				<p class="Product-title">YUME</p>
 				<p class="tag">New</p><p class="tag">Yume-vision</p><p class="tag">Equipment</p>
@@ -186,7 +189,7 @@
 		</a>
 		<div class="Column_wrapper">
 			<div class="Column-left">
-				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/etc/G19_slide-cover-plate_charging-ring.stl" target="_blank" rel="noopener noreferrer">
+				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/etc/G19_slide-cover-plate_charging-ring.stl" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/IMG_20210125_2348102.jpg">
 						<p class="Product-title">Glock Charging Ring</p>
 						<p class="tag">Glock</p><p class="tag">Custom parts</p>
@@ -195,7 +198,7 @@
 					</a>
 			</div>
 			<div class="Column-right">
-				<a class="Product-min" href="https://github.com/Qoo622/3D-print/blob/master/MP7/MP7-Stock-base.stl" target="_blank" rel="noopener noreferrer">
+				<a class="Product-min fadeUpTrigger" href="https://github.com/Qoo622/3D-print/blob/master/MP7/MP7-Stock-base.stl" target="_blank" rel="noopener noreferrer">
 					<img src="https://qoo622.github.io/Arsenal-Q62/img/others/IMG_20210604_1944569-01.jpeg">
 						<p class="Product-title">MP7 20mm Stock Base</p>
 						<p class="tag">MP7</p><p class="tag">Custom parts</p>
